# mile-csa-light

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
examples/build-transaction/: CMakeLists.txt
examples/check-trx-approving/: CMakeLists.txt  send-1xdr-wait-for-approving.cpp
examples/light-api/: build-transaction.cpp
examples/light-api-and-curl/: send-1xdr.cpp
examples/send-1xdr-with-curl/: send-1xdr.cpp
examples/send-2xdr-with-curl/: CMakeLists.txt
include/: milecsa_light_api.hpp
lib/: CMakeLists.txt
lib/cmake/: milecsa_light.cmake
src/: milecsa_assets.cpp  milecsa_crypto_types.cpp  milecsa_key_pairs.cpp  milecsa_utils.cpp  milecsa_utils.hpp
src/transactions_wrapper/: milecsa_emission.cpp  milecsa_transaction.cpp  milecsa_transfer.cpp
test/: CMakeLists.txt  MileTest.h
test/initial/: CMakeLists.txt  initial_test.cpp
test/milecsa_keys_pair_test/: CMakeLists.txt  milecsa_main_test.cpp
test/milecsa_transactions_test/: CMakeLists.txt  MIleTestTransaction.hpp  milecsa_emission_test.hpp  milecsa_transactions_test.cpp  milecsa_transfer_test.hpp
